[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/ActiveAndNonActiveSynergyDisplayer.gd" type="Script" id=1]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/MultipleSynergyDisplayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameHUDRelated/LeftSidePanel/SynergyInfoPanel/Separator.tscn" type="PackedScene" id=3]

[node name="ActiveAndNonActiveSynergyDisplayer" type="VBoxContainer"]
mouse_filter = 2
alignment = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NonActiveCompositionSeparator" parent="." instance=ExtResource( 3 )]
margin_right = 91.0
margin_bottom = 18.0
mouse_filter = 2
custom_constants/margin_left = 3
separator_text = "Non-active Groups"

[node name="NonActiveCompositionSynergies" parent="." instance=ExtResource( 2 )]
margin_top = 22.0
margin_right = 91.0
margin_bottom = 22.0
mouse_filter = 2
custom_constants/margin_left = 3

[node name="NonActiveDominantSeparator" parent="." instance=ExtResource( 3 )]
margin_top = 26.0
margin_right = 91.0
margin_bottom = 44.0
mouse_filter = 2
custom_constants/margin_left = 3
separator_text = "Non-active Dominants"

[node name="NonActiveDominantSynergies" parent="." instance=ExtResource( 2 )]
margin_top = 48.0
margin_right = 91.0
margin_bottom = 48.0
mouse_filter = 2
custom_constants/margin_left = 3

[node name="ActiveSeparator" parent="." instance=ExtResource( 3 )]
margin_top = 52.0
margin_right = 91.0
margin_bottom = 70.0
mouse_filter = 2
custom_constants/margin_left = 3
separator_text = "Active Synergies:"

[node name="ActiveSynergies" parent="." instance=ExtResource( 2 )]
margin_top = 74.0
margin_right = 91.0
margin_bottom = 77.0
mouse_filter = 2
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3
